--- a/CC106MidtermExam/src/app/home/home.page.scss
+++ b/CC106MidtermExam/src/app/home/home.page.scss
@@ -1,27 +1,30 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content{
+	--background: #2f191b;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-toolbar{
+	--background: #52221f;
+  color: #e8d4a3;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-card{
+	--background: #52221f;
 }
-
-#container a {
-  text-decoration: none;
+h2,h3{
+  color: #e8d4a3;
+}
+#kamusta{
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+#start-button{
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 35px;
+  --background: #e2a946;
+    color: #931c19;
+}
+ion-grid{
+  display: flex; 
+  justify-content: center;
 }
