--- a/CC106MidtermExam/src/app/result/result.page.html
+++ b/CC106MidtermExam/src/app/result/result.page.html
@@ -5,5 +5,20 @@
 </ion-header>
 
 <ion-content>
-
+  <div id="trophy">
+  <ion-img src="assets/trophy2.png" alt="trophy"></ion-img>
+</div>
+<ion-item>
+  <ion-label>Maling sagot</ion-label>
+  <ion-badge color="warning">2</ion-badge>
+</ion-item>
+<ion-item>
+  <ion-label>Tamang sagot</ion-label>
+  <ion-badge color="warning">3</ion-badge>
+</ion-item>
+<ion-item>
+  <ion-label>RESULT</ion-label>
+  <ion-badge color="warning">3/5</ion-badge>
+</ion-item>
+<ion-button>Isubmit</ion-button>
 </ion-content>
