--- a/CC106MidtermExam/src/app/result/result.page.html
+++ b/CC106MidtermExam/src/app/result/result.page.html
@@ -5,6 +5,23 @@
 </ion-header>
 
 <ion-content>
+  <div class="share">
+    <h6>Share score</h6>
+  </div>
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="share-social-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+    <ion-fab-list side="bottom">
+      <ion-fab-button><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+    <ion-fab-list side="start">
+      <ion-fab-button><ion-icon name="logo-instagram"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
   <div id="trophy">
   <ion-img src="assets/trophy2.png" alt="trophy"></ion-img>
 </div>
