--- a/CC106MidtermExam/src/app/play/play.page.html
+++ b/CC106MidtermExam/src/app/play/play.page.html
@@ -1,9 +1,38 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>play</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<ion-app class="md">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Mga Pagsusulit na Pag-pipilian</ion-title>
+    </ion-toolbar>
+  </ion-header>
 <ion-content>
-
+  <ion-grid id="container">
+    <ion-row>
+      <ion-card class="ion-padding"> 
+        <ion-card-header>
+          <ion-card-title><h2>Level 1</h2></ion-card-title>
+          <ion-card-subtitle><h3>Ito ay para sa mga baguhan palang pagdating sa Kasaysayan ng Pilipinas</h3></ion-card-subtitle>
+        </ion-card-header>
+        <ion-button id="start-button" class="ion-padding">Simulan Na</ion-button>
+      </ion-card>
+    </ion-row>
+    <ion-row>
+      <ion-card class="ion-padding"> 
+        <ion-card-header>
+          <ion-card-title><h2>Level 2</h2></ion-card-title>
+          <ion-card-subtitle><h3>Ito ay para sa may kaalaman na pagdating sa ating Kasaysayan</h3></ion-card-subtitle>
+        </ion-card-header>
+        <ion-button id="start-button" class="ion-padding">Simulan Na</ion-button>
+      </ion-card>
+    </ion-row>
+    <ion-row>
+      <ion-card class="ion-padding"> 
+        <ion-card-header>
+          <ion-card-title><h2>Level 3</h2></ion-card-title>
+          <ion-card-subtitle><h3>Ikaw ba ay isa sa mga magagaling na sa ating Kasaysayan? Halika't subukan mo itong pagsusulit na ito</h3></ion-card-subtitle>
+        </ion-card-header>
+        <ion-button id="start-button" class="ion-padding">Simulan Na</ion-button>
+      </ion-card>
+    </ion-row>
+ </ion-grid>
 </ion-content>
+</ion-app>
