--- a/CC106MidtermExam/src/app/home/home.page.html
+++ b/CC106MidtermExam/src/app/home/home.page.html
@@ -7,10 +7,8 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-  <ion-card class="ion-padding">
-    <div id="kamusta">
+  <ion-card>
       <img alt="Kamusta" src="assets\kamusta.jpeg"/>
-    </div>  
     <ion-card-header>
       <ion-card-title><h2 class="ion-text-center">Kamusta! User</h2></ion-card-title>
       <ion-card-subtitle><h3 class="ion-text-center">Handa ka na bang subukan ang aming mga pagsusulit?</h3></ion-card-subtitle>
