--- a/CC106MidtermExam/src/app/login/login.page.html
+++ b/CC106MidtermExam/src/app/login/login.page.html
@@ -1,22 +1,24 @@
-<ion-app>
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-card class="ion-padding">
-        <h2 class="ion-padding">Welcome! to the Quiz Application</h2>
-        <ion-list lines="none" class="ion-padding">
-          <ion-item>
-            <ion-label position="stacked">Username</ion-label>
-            <ion-input [clearInput]="true" placeholder="Enter your Username" value=""></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked">Password</ion-label>
-            <ion-input type="password" placeholder="Enter your Password"></ion-input>
-          </ion-item>
-        </ion-list>
-        <ion-button size="default" class="ion-padding">Login</ion-button>
-      </ion-card>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+<ion-app class="md">
+  <ion-content>
+    <div class="container">
+      <ion-card>
+        <img alt="Welcome" src="assets/welcome.gif"/>
+        <ion-card-header>
+          <ion-card-title><h2>Welcome! to the Quiz Application</h2></ion-card-title>
+        </ion-card-header>
+          <ion-list lines="none">
+            <ion-item>
+              <ion-label position="stacked">Username</ion-label>
+              <ion-input [clearInput]="true" placeholder="Enter your Username" value=""></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Password</ion-label>
+              <ion-input type="password" placeholder="Enter your Password"></ion-input>
+            </ion-item>
+          </ion-list>
+          <ion-button routerLink="/home" size="full">Login</ion-button>
+          <ion-button size="full" fill="clear">Register</ion-button>
+        </ion-card>
+      </div>
+  </ion-content>
 </ion-app>
