--- a/CC106MidtermExam/src/app/account/account.page.html
+++ b/CC106MidtermExam/src/app/account/account.page.html
@@ -1,9 +1,71 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Account</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
+  <ion-buttons>
+    <ion-back-button default-href="/home"></ion-back-button>
+  </ion-buttons>
 
+<div class="container">
+  <h1 class="name">User045321</h1>
+  <ion-grid>
+    <ion-row>
+      <ion-col id="corner1"><ion-icon name="star-half" id="icon1"></ion-icon><br>Points</ion-col>
+      <ion-col><ion-icon name="medal" id="icon1"></ion-icon><br>Rank</ion-col>
+      <ion-col id="corner2"><ion-icon name="newspaper" id="icon1"></ion-icon><br>Quizzes</ion-col>
+    </ion-row>
+  </ion-grid>
+  <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+    eiusmod tempor incididunt</p>
+  <img src="assets/images/badge1.png" class="image2">
+  <img src="assets/images/badge2.png" class="image2">
+  <img src="assets/images/badge3.png" class="image2">
+  <div class="div1">
+    <div class="div2">
+      <ion-list>
+          <ion-select interface="popover" placeholder="Select Time">
+            <ion-select-option value="today">Today</ion-select-option>
+            <ion-select-option value="weekly">Weekly</ion-select-option>
+            <ion-select-option value="monthly">Monthly</ion-select-option>
+            <ion-select-option value="yearly">Yearly</ion-select-option>
+          </ion-select>
+      </ion-list>
+    </div>
+    <p class="text2">You have played a total of <span class="quizno">30 quizzes</span> this month!</p>
+
+    <div class="circle-wrap">
+      <div class="inside-circle"> 75% </div>
+      <div class="circle">
+        <div class="mask half">
+          <div class="fill">
+          </div>
+      </div>
+        <div class="mask full">
+          <div class="fill">
+          </div>
+       </div>
+      </div>
+    </div>
+
+    <div class="div3">
+      <p class="text3">6</p>
+      <p>Quiz lose</p>
+    </div>
+
+    <div class="div4">
+      <p class="text4">24</p>
+      <p>Quiz won</p>
+    </div>
+
+  </div><br>
+
+<div class="stats"><br><h3 class="statistics">Statistics</h3>
+  <div class="info1"><p class="p1">Winrate</p></div>
+  <div class="info2"><p class="p1">Progress</p></div>
+  <div class="info3"><p class="p1">Achievement</p></div>
+</div>
+
+</div>
+
+  <img src="assets/images/profile1.png" class="image1">
 </ion-content>
+ 
