--- a/CC106MidtermExam/src/app/leaderboards/leaderboards.page.html
+++ b/CC106MidtermExam/src/app/leaderboards/leaderboards.page.html
@@ -1,9 +1,99 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Leaderboards</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-buttons>
+    <ion-back-button default-href="/home"></ion-back-button>
+    <h2 class="title">Leaderboards</h2>
+  </ion-buttons>
 
+  <br><ion-segment color="dark" value="light">
+    <ion-segment-button value="light">
+      <ion-label>Weekly</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="segment">
+      <ion-label>All Time</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <div class="div4">
+  <ion-grid>
+    <ion-row>
+      <ion-col id="corner1"> <img src="assets/images/profile1.png" class="image2"><br>User045321
+      <div class="div1">
+        497
+      </div>
+      </ion-col>
+      <ion-col id="corner3"> <img src="assets/images/profile2.png" class="image2"><br>Hanako
+      <div class="div1">
+        527
+      </div>
+      </ion-col>
+      <ion-col id="corner2"> <img src="assets/images/profile4.png" class="image2"><br>Justin
+      <div class="div1">
+        450
+      </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
+
+<div class="div3">
+  <img src="assets/images/stairs.png" class="image1">
+</div>
+  <div class="container">
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">1</h1><img src="assets/images/profile2.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Hanako<br><span>527 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">2</h1><img src="assets/images/profile1.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">User045321<br><span>497 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">3</h1><img src="assets/images/profile4.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Justin<br><span>450 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">4</h1><img src="assets/images/profile3.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Yujin<br><span>402 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">5</h1><img src="assets/images/profile7.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Kent<br><span>379 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">6</h1><img src="assets/images/profile8.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Jiwoo<br><span>332 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">7</h1><img src="assets/images/profile5.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Wendy<br><span>241 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid class="grid1">
+      <ion-row>
+        <ion-col id="corner4"><h1 class="rank">8</h1><img src="assets/images/profile6.png" class="profile"></ion-col>
+        <ion-col id="corner5"><h4 class="rankname">Liz<br><span>226 Points</span></h4></ion-col>
+      </ion-row>
+    </ion-grid>
+
+  </div>
 </ion-content>
