--- a/CC106MidtermExam/src/app/login/login.page.html
+++ b/CC106MidtermExam/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-app class="md">
   <ion-content>
     <div class="container">
-      <ion-card>
+      <ion-card class="ion-padding">
         <img alt="Welcome" src="assets/welcome.gif"/>
         <ion-card-header>
           <ion-card-title><h2>Welcome! to the Quiz Application</h2></ion-card-title>
