--- a/CC106MidtermExam/src/app/account/account.page.html
+++ b/CC106MidtermExam/src/app/account/account.page.html
@@ -1,10 +1,7 @@
-
-
 <ion-content>
   <ion-buttons>
-    <ion-back-button default-href="/home"></ion-back-button>
+    <ion-back-button defaultHref="/home"></ion-back-button>
   </ion-buttons>
-
 <div class="container">
   <h1 class="name">User045321</h1>
   <ion-grid>
