--- a/CC106MidtermExam/src/app/home/home.page.html
+++ b/CC106MidtermExam/src/app/home/home.page.html
@@ -13,7 +13,9 @@
       <ion-card-title><h2 class="ion-text-center">Kamusta! User</h2></ion-card-title>
       <ion-card-subtitle><h3 class="ion-text-center">Handa ka na bang subukan ang aming mga pagsusulit?</h3></ion-card-subtitle>
     </ion-card-header>
-    <ion-button id="start-button" class="ion-padding">Start Game</ion-button>
+    <ion-button id="start-button" class="ion-padding" routerLink="/play">Start Game</ion-button>
+    <ion-button id="start-button" class="ion-padding" routerLink="/leaderboards">Leaderboards</ion-button>
+    <ion-button id="start-button" class="ion-padding" routerLink="/account">Account</ion-button>
   </ion-card>
  </ion-row>
  </ion-grid>
