--- a/CC106MidtermExam/src/app/leaderboards/leaderboards.page.html
+++ b/CC106MidtermExam/src/app/leaderboards/leaderboards.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-buttons>
-    <ion-back-button default-href="/home"></ion-back-button>
+    <ion-back-button defaultHref="/home"></ion-back-button>
     <h2 class="title">Leaderboards</h2>
   </ion-buttons>
 
@@ -94,6 +94,5 @@
         <ion-col id="corner5"><h4 class="rankname">Liz<br><span>226 Points</span></h4></ion-col>
       </ion-row>
     </ion-grid>
-
   </div>
 </ion-content>
