--- a/CC106MidtermExam/src/app/login/login.page.scss
+++ b/CC106MidtermExam/src/app/login/login.page.scss
@@ -1,28 +1,28 @@
 ion-content{
-	--background: #2f191b;
+	--background: #6a5adf;
 }
 ion-card{
-	--background: #52221f;
+	--background: #fff;
 }
 
 ion-card img{
 	width: 100%;
 }
 ion-list{
-    background-color: #931c19;
+    background-color: #6a5adf;
 }
 ion-item{
-	--background: #931c19;
-    color: #e8d4a3;
+	--background: #6a5adf;
+    color: #fff;
 }
 
 ion-button{
-	--background: #e2a946;
-    color: #f5e9c9;
+	--background: #6a5adf;
+    color: #fff;
     margin: 20px;
 }
 h2{
-    color: #e8d4a3;
+    color: #6a5adf;
 }
 .container{
     display: flex;
