--- a/CC106MidtermExam/src/app/question-pool/question-pool.page.html
+++ b/CC106MidtermExam/src/app/question-pool/question-pool.page.html
@@ -14,7 +14,7 @@
             <ion-select-option value="black">D. Joseph Estrada</ion-select-option>
         </ion-select>
     </ion-item>
-    <ion-list>
+    <ion-list lines="none">
         <ion-item>
             <ion-label>A. Jose Mari chan</ion-label>
         </ion-item>
@@ -39,7 +39,7 @@
           <ion-select-option value="red">D. Andres Bonifacio </ion-select-option>
       </ion-select>
   </ion-item>
-  <ion-list>
+  <ion-list lines="none">
       <ion-item>
           <ion-label>A. Lapu-Lapu</ion-label>
       </ion-item>
@@ -64,7 +64,7 @@
           <ion-select-option value="true">D. Maria Clara</ion-select-option>
       </ion-select>
   </ion-item>
-  <ion-list>
+  <ion-list lines="none">
       <ion-item>
           <ion-label>A. Darna</ion-label>
       </ion-item>
@@ -79,7 +79,7 @@
       </ion-item>
   </ion-list>
 </ion-card>
-<ion-card> <!--fourth QUESTION-->
+<ion-card > <!--fourth QUESTION-->
   <ion-item>
       <ion-label>4. Ano ang tinatawag "SUMMER CAPITAL<br> OF THE PHILIPPINES"?</ion-label>
       <ion-select interface="action-sheet" class="custom-options">
@@ -89,7 +89,7 @@
           <ion-select-option value="red">D. Cavite</ion-select-option>
       </ion-select>
   </ion-item>
-  <ion-list>
+  <ion-list lines="none">
       <ion-item>
           <ion-label>A. Intramuros</ion-label>
       </ion-item>
@@ -114,7 +114,7 @@
           <ion-select-option value="red">D. Avengers</ion-select-option>
       </ion-select>
   </ion-item>
-  <ion-list>
+  <ion-list  lines="none">
       <ion-item>
           <ion-label>A. Gomburza</ion-label>
       </ion-item>
@@ -129,5 +129,5 @@
       </ion-item>
   </ion-list>
 </ion-card>
-<ion-button id="submit-button" class="ion-padding">Submit</ion-button>
+<ion-button id="submit-button" class="ion-padding" routerLink="/result">Submit</ion-button>
 </ion-content>
