--- a/CC106MidtermExam/src/app/result/result.page.html
+++ b/CC106MidtermExam/src/app/result/result.page.html
@@ -37,5 +37,5 @@
   <ion-label>RESULT</ion-label>
   <ion-badge color="warning">3/5</ion-badge>
 </ion-item>
-<ion-button>Isubmit</ion-button>
+<ion-button routerLink="/home">Isubmit</ion-button>
 </ion-content>
